--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@ title: Filip Havíř
 
 <div class="me">
     <!-- Introduction -->
-    <div>
-        <p>Zdravím! Jsem<br><span class="name">Filip Havíř.</span></p>
-        <p>DevOps Cloud Engineer.</p>
+    <div class="me__text">
+        <p class="me__first-line">Zdravím! Jsem<br><span class="name">Filip Havíř.</span></p>
+        <p class="me__second-line">DevOps Cloud Engineer.</p>
     </div>
 
     <!-- Photo -->
