--- a/index.html
+++ b/index.html
@@ -3,26 +3,24 @@ layout: template.njk
 title: Filip Havíř
 ---
 
-
 <div class="me">
 
     <!-- Photo -->
-       <img class="image" src="/img/image.png" alt="fotka Filipa Havíře">
+    <img class="me__image" src="/img/image.png" alt="fotka Filipa Havíře">
 
     <!-- Introduction -->
     <div class="me__text">
         <p class="me__first-line">Zdravím! Jsem<br><span class="name">Filip Havíř.</span></p>
         <p class="me__second-line">DevOps Cloud Engineer.</p>
     </div>
-
     
 </div>
 
-<!-- About me -->
+<!-- Text block About me -->
 <div class="about-me">
     <h3>Něco málo o mně</h3>
-    <p class="paragraph">IT je moje srdcová záležitost, které se věnuju už od školky. Doslova. A pořád mě nepřestává zajímat a bavit. Jestli hledáš někoho jako jsem já, tak jsi na správné adrese.</p>
-    <a class="link" href="/omne/">
+    <p class="about-me__paragraph">IT je moje srdcová záležitost, které se věnuju už od školky. Doslova. A pořád mě nepřestává zajímat a bavit. Jestli hledáš někoho jako jsem já, tak jsi na správné adrese.</p>
+    <a class="link link__about-me" href="/omne/">
     <p class="button">Chci zjistit víc</p>
     </a>
     
