--- a/zkusenosti.html
+++ b/zkusenosti.html
@@ -4,7 +4,7 @@ title: Spolupráce
 ---
 
 
-    <div class="content__jobs">
+    <div class="jobs">
 
     <h2 class="jobs__heading">Kde jsem pracoval</h2>
 
