--- a/kontakt.html
+++ b/kontakt.html
@@ -4,7 +4,7 @@ title: Kontakt
 ---
 <div class="contact">
     <div class="contact__first-part">
-        <h2 class="contact__heading contact__heading--first">Kontakt</h2>
+        <h2 class="heading contact__heading--first">Kontakt</h2>
         <p>Filip Havíř</p>
         <p>DevOps Engineer</p>
         
@@ -17,11 +17,11 @@ title: Kontakt
 
 
     <div class="form">
-    <h2 class="contact__heading contact__heading--second">Ozvěte se mi!</h2>
+    <h2 class="heading contact__heading--second">Ozvěte se mi!</h2>
 
 
     <form action="https://submit-form.com/hgB8cMNE5" method="post">
-        <input type="hidden" name="_redirect" value=""/>
+        <input type="hidden" name="_redirect" value="https://filip-havir.netlify.app/vyplnenyform/"/>
     <div class="form-field">
         <label for="jmeno">Jméno *</label>
         
