--- a/spoluprace.html
+++ b/spoluprace.html
@@ -2,3 +2,8 @@
 layout: template.njk
 title: Spolupráce
 ---
+
+<div class="cooperation">
+    <h2 class="heading cooperation__heading">Díky za váš zájem!</h2>
+    <h3></h3>
+</div>
