--- a/zkusenosti.html
+++ b/zkusenosti.html
@@ -6,7 +6,7 @@ title: Spolupráce
 
     <div class="jobs">
 
-    <h2 class="jobs__heading">Kde jsem pracoval</h2>
+    <h2 class="heading jobs__heading">Kde jsem pracoval</h2>
 
 
 <div class="job job--precismo">
