--- a/vyplnenyform.html
+++ b/vyplnenyform.html
@@ -3,4 +3,6 @@ layout: template.njk
 title: Díky!
 ---
 
-<h2>Díky za vyplnění! Ozvu se vám co nejdřív.</h2>
+<div class="thank-you">
+    <h2 class="heading thank-you__heading">Díky za vyplnění! Ozvu se vám co nejdřív.</h2>
+</div>
