--- a/omne.html
+++ b/omne.html
@@ -2,3 +2,25 @@
 layout: template.njk
 title: O mně
 ---
+
+<div class="page info-about-me">
+
+    <h2 class="heading info-about-me__heading">Pár informací o mně</h2>
+
+
+        <div class="info info--story">
+            <h3 class="info__title">Moje cesta k IT</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem dolorum praesentium quaerat dignissimos voluptates, ullam, dolorem quae, facere suscipit nobis pariatur soluta? Ullam expedita quos, qui in laudantium alias nihil.</p>
+        </div>
+
+        <div class="info info--education">
+            <h3 class="info__title">Vzdělání</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem dolorum praesentium quaerat dignissimos voluptates, ullam, dolorem quae, facere suscipit nobis pariatur soluta? Ullam expedita quos, qui in laudantium alias nihil.</p>
+        </div>
+
+        <div class="info info--certification">
+            <h3 class="info__title">Získané certifikace</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem dolorum praesentium quaerat dignissimos voluptates, ullam, dolorem quae, facere suscipit nobis pariatur soluta? Ullam expedita quos, qui in laudantium alias nihil.</p>
+        </div>
+
+</div>
