--- a/spoluprace.html
+++ b/spoluprace.html
@@ -3,7 +3,10 @@ layout: template.njk
 title: Spolupráce
 ---
 
-<div class="cooperation">
+<div class="page--just-text cooperation">
+
     <h2 class="heading cooperation__heading">Díky za váš zájem!</h2>
-    <h3></h3>
+
+    <h3 class="heading">V tuto chvíli nemám kapacitu na žádnou formu spolupráce.</h3>
+    
 </div>
