--- a/zkusenosti.html
+++ b/zkusenosti.html
@@ -3,41 +3,40 @@ layout: template.njk
 title: Spolupráce
 ---
 
-
-    <div class="jobs">
+<div class="page jobs">
 
     <h2 class="heading jobs__heading">Kde jsem pracoval</h2>
 
 
-<div class="job job--precismo">
-    <img class="job__logo" src="/img/precismo-logo.png" alt="">
-    <h3 class="job__title">Full Stack Developer</h3>
-    <h4 class="job__time">2020–2021</h4>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem dolorum praesentium quaerat dignissimos voluptates, ullam, dolorem quae, facere suscipit nobis pariatur soluta? Ullam expedita quos, qui in laudantium alias nihil.</p>
-</div>
+        <div class="job job--precismo">
+            <img class="job__logo" src="/img/precismo-logo.png" alt="">
+            <h3 class="job__title">Full Stack Developer</h3>
+            <h4 class="job__time">2020–2021</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem dolorum praesentium quaerat dignissimos voluptates, ullam, dolorem quae, facere suscipit nobis pariatur soluta? Ullam expedita quos, qui in laudantium alias nihil.</p>
+        </div>
 
-<div class="job job--data-force">
-    <img class="job__logo" src="/img/dataforce-logo.png" alt="">
-    <h3 class="job__title">DevOps Engineer</h3>
-    <h4 class="job__time">2021–2022</h4>
-</div>
+        <div class="job job--data-force">
+            <img class="job__logo" src="/img/dataforce-logo.png" alt="">
+            <h3 class="job__title">DevOps Engineer</h3>
+            <h4 class="job__time">2021–2022</h4>
+        </div>
 
-<div class="job job--kosik">
-    <img class="job__logo" src="/img/kosik-logo.png" alt="">
-    <h3 class="job__title">DevOps Cloud Engineer</h3>
-    <h4 class="job__time">2022–2024</h4>
-</div>
+        <div class="job job--kosik">
+            <img class="job__logo" src="/img/kosik-logo.png" alt="">
+            <h3 class="job__title">DevOps Cloud Engineer</h3>
+            <h4 class="job__time">2022–2024</h4>
+        </div>
 
-<div class="job job--zasilkovna">
-    <img class="job__logo" src="/img/zasilkovna-logo.png" alt="">
-    <h3 class="job__title">Kubernetes Engineer</h3>
-    <h4 class="job__time">2024–2025</h4>
-</div>
+        <div class="job job--zasilkovna">
+            <img class="job__logo" src="/img/zasilkovna-logo.png" alt="">
+            <h3 class="job__title">Kubernetes Engineer</h3>
+            <h4 class="job__time">2024–2025</h4>
+        </div>
 
-<div class="job job--promethist">
-    <img class="job__logo" src="/img/promethist-logo.png" alt="">
-    <h3 class="job__title">DevOps Cloud Engineer</h3>
-    <h4 class="job__time">2025</h4>
-</div>
+        <div class="job job--promethist">
+            <img class="job__logo" src="/img/promethist-logo.png" alt="">
+            <h3 class="job__title">DevOps Cloud Engineer</h3>
+            <h4 class="job__time">2025</h4>
+        </div>
 
 </div>
