--- a/vyplnenyform.html
+++ b/vyplnenyform.html
@@ -3,6 +3,10 @@ layout: template.njk
 title: Díky!
 ---
 
-<div class="thank-you">
-    <h2 class="heading thank-you__heading">Díky za vyplnění! Ozvu se vám co nejdřív.</h2>
+<div class="page--just-text thank-you">
+
+    <h2 class="heading thank-you__heading">Díky za vyplnění!</h2>
+
+    <h3 class="heading">Ozvu se vám co nejdřív.</h3>
+
 </div>
