--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@ layout: template.njk
 title: Filip Havíř
 ---
 <div class="content">
+
+    <!-- Block Me -->
     <div class="me">
 
         <!-- Photo -->
@@ -16,13 +18,14 @@ title: Filip Havíř
         
     </div>
 
-    <!-- Text block About me -->
+    <!-- Block About Me -->
     <div class="about-me">
         <h3>Něco málo o mně</h3>
         <p class="about-me__paragraph">IT je moje srdcová záležitost, které se věnuju už od školky. Doslova. A pořád mě nepřestává zajímat a bavit. Jestli hledáš někoho jako jsem já, tak jsi na správné adrese.</p>
-        <a class="link link__about-me" href="/omne/">
-        <p class="button">Chci zjistit víc</p>
+        <a class="link about-me__link" href="/omne/">
+            <p class="about-me__button">Chci zjistit víc</p>
         </a>
         
     </div>
+
 </div>
