--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Filip Havíř
     <div class="me">
 
         <!-- Photo -->
-        <img class="me__image" src="/img/image.png" alt="fotka Filipa Havíře">
+        <img class="me__image" src="/img/filip.png" alt="fotka Filipa Havíře">
 
         <!-- Introduction -->
         <div class="me__text">
