--- a/omne.html
+++ b/omne.html
@@ -10,7 +10,7 @@ title: O mně
 
         <div class="info info--story">
             <h3 class="info__title">Moje cesta k IT</h3>
-            <p>Informační technologie vnímám jako nástroj pro neomezenou kreativitu. V dnešní době je možné si za vynoložení přiměřeného úsilí naprogramovat nebo sestrojit téměř cokoli. Od robota, který poslouchá pokyny přes hru s velmi realistickou grafikou a dron ovládaný přes internet až po cloudovou infrastrukturu, která se dá jedním kliknutím celá zlikvidovat a druhým zase obnovit.<br>I já jsem doma odmala pracoval na uskutečnění svých růnorodých nápadů a časem jsem objevil svět Linuxu, DevOps a automatizace. A tenhle svět jsem si oblíbil. Na DevOps práci se mi líbí její rozmanitost - člověk musí být trochu Developer, aby pochopil funkčnost aplikace a zároveň musí mít ponětí o tom, jak funguje Operations.</p>
+            <p>Informační technologie vnímám jako nástroj pro neomezenou kreativitu. V dnešní době je možné si za vynaložení přiměřeného úsilí naprogramovat nebo sestrojit téměř cokoli. Od robota, který poslouchá pokyny přes hru s velmi realistickou grafikou a dron ovládaný přes internet až po cloudovou infrastrukturu, která se dá jedním kliknutím celá zlikvidovat a druhým zase obnovit.<br>I já jsem doma odmala pracoval na uskutečnění svých různorodých nápadů a časem jsem objevil svět Linuxu, DevOps a automatizace. A tenhle svět jsem si oblíbil. Na DevOps práci se mi líbí její rozmanitost - člověk musí být trochu Developer, aby pochopil funkčnost aplikace a zároveň musí mít ponětí o tom, jak funguje Operations.</p>
         </div>
 
         <div class="info info--education">
